[tool.poetry]
name = "alembic_api"
version = "0.1.0"
description = ""
authors = ["dotX12 <hash@shitposting.team>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.0"
alembic = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
